<resources>
    <string name="app_name">Submission</string>
    <string name="tv_movies" translatable="false">TV Movies</string>
    <string name="movies" translatable="false">Movies</string>
    <string name="title" translatable="false">Title</string>
    <string name="date" translatable="false">10 January 2019</string>
    <string name="description" translatable="false">Description</string>
    <string name="bahasa" translatable="false">Bahasa</string>
    <string name="english">English</string>
    <string name="language" translatable="false">Language</string>
    <string name="image_content" translatable="false">Image</string>
    <string name="overview">Overview</string>
    <string name="minutes">minutes</string>
    <string-array name="tv_movie_title">
        <item>Arrow</item>
        <item>Doom Patrol</item>
        <item>Dragon Ball</item>
        <item>Fairy Tail</item>
        <item>Family Guy</item>
        <item>The Flash</item>
        <item>Game Of Thrones</item>
        <item>Gotham</item>
        <item>"Grey's" Anatomy</item>
        <item>Hanna</item>
        <item>"Marvel's" Iron Fist</item>
        <item>Naruto Shippūden</item>
        <item>NCIS</item>
        <item>Riverdale</item>
        <item>Shameless</item>
        <item>Supergirl</item>
        <item>Supernatural</item>
        <item>The Simpsons</item>
        <item>The Umbrella Academy</item>
        <item>The Walking Dead</item>
    </string-array>
    <string-array name="tv_movie_date">
        <item>October 10, 2012</item>
        <item>February 15, 2019</item>
        <item>February 26, 1986</item>
        <item>October 12, 2009</item>
        <item>January 31, 1999</item>
        <item>October 7, 2014</item>
        <item>April 17, 2011</item>
        <item>September 22, 2014</item>
        <item>March 27, 2005</item>
        <item>March 28, 2019</item>
        <item>March 17, 2017</item>
        <item>February 15, 2007</item>
        <item>September 23, 2003</item>
        <item>January 26, 2017</item>
        <item>January 9, 2011</item>
        <item>October 26, 2015</item>
        <item>September 13, 2005</item>
        <item>December 17, 1989</item>
        <item>February 15, 2019</item>
        <item>August 23, 2015</item>
    </string-array>
    <string-array name="tv_movie_minutes">
        <item>42m</item>
        <item>60m</item>
        <item>25m</item>
        <item>22m</item>
        <item>22m</item>
        <item>44m</item>
        <item>60m</item>
        <item>43m, 60m</item>
        <item>43m</item>
        <item>50m</item>
        <item>55m</item>
        <item>22m</item>
        <item>45m</item>
        <item>45m</item>
        <item>60m, 55m</item>
        <item>42m</item>
        <item>45m</item>
        <item>22m</item>
        <item>60m</item>
        <item>43m, 60m</item>
    </string-array>
    <string-array name="tv_movie_desc">
        <item>Spoiled billionaire playboy Oliver Queen is missing and presumed dead when his yacht is lost at sea. He returns five years later a changed man, determined to clean up the city as a hooded vigilante armed with a bow.</item>
        <item>The Doom Patrol’s members each suffered horrible accidents that gave them superhuman abilities — but also left them scarred and disfigured. Traumatized and downtrodden, the team found purpose through The Chief, who brought them together to investigate the weirdest phenomena in existence — and to protect Earth from what they find.</item>
        <item>Long ago in the mountains, a fighting master known as Gohan discovered a strange boy whom he named Goku. Gohan raised him and trained Goku in martial arts until he died. The young and very strong boy was on his own, but easily managed. Then one day, Goku met a teenage girl named Bulma, whose search for the dragon balls brought her to "Goku's" home. Together, they set off to find all seven dragon balls in an adventure that would change "Goku's" life forever. See how Goku met his life long friends Bulma, Yamcha, Krillin, Master Roshi and more. And see his adventures as a boy, all leading up to Dragonball Z and later Dragonball GT.</item>
        <item>Lucy is a 17-year-old girl, who wants to be a full-fledged mage. One day when visiting Harujion Town, she meets Natsu, a young man who gets sick easily by any type of transportation. But Natsu "isn't" just any ordinary kid, "he's" a member of one of the "world's" most infamous mage guilds: Fairy Tail.</item>
        <item>Sick, twisted, politically incorrect and "Freakin'" Sweet animated series featuring the adventures of the dysfunctional Griffin family. Bumbling Peter and long-suffering Lois have three kids. Stewie (a brilliant but sadistic baby bent on killing his mother and taking over the world), Meg (the oldest, and is the most unpopular girl in town) and Chris (the middle kid, "he's" not very bright but has a passion for movies). The final member of the family is Brian - a talking dog and much more than a pet, he keeps Stewie in check whilst sipping Martinis and sorting through his own life issues.</item>
        <item>After a particle accelerator causes a freak storm, CSI Investigator Barry Allen is struck by lightning and falls into a coma. Months later he awakens with the power of super speed, granting him the ability to move through Central City like an unseen guardian angel. Though initially excited by his newfound powers, Barry is shocked to discover he is not the only "meta-human" who was created in the wake of the accelerator explosion — and not everyone is using their new powers for good. Barry partners with S.T.A.R. Labs and dedicates his life to protect the innocent. For now, only a few close friends and associates know that Barry is literally the fastest man alive, but it "won't" be long before the world learns what Barry Allen has become…The Flash.</item>
        <item>Seven noble families fight for control of the mythical land of Westeros. Friction between the houses leads to full-scale war. All while a very ancient evil awakens in the farthest north. Amidst the war, a neglected military order of misfits, the "Night's" Watch, is all that stands between the realms of men and icy horrors beyond.</item>
        <item>Before there was Batman, there was GOTHAM.</item>
        <item>Follows the personal and professional lives of a group of doctors at Seattle’s Grey Sloan Memorial Hospital.</item>
        <item>This thriller and coming-of-age drama follows the journey of an extraordinary young girl as she evades the relentless pursuit of an off-book CIA agent and tries to unearth the truth behind who she is. Based on the 2011 Joe Wright film.</item>
        <item>Danny Rand resurfaces 15 years after being presumed dead. Now, with the power of the Iron Fist, he seeks to reclaim his past and fulfill his destiny.</item>
        <item>Naruto Shippuuden is the continuation of the original animated TV series Naruto.The story revolves around an older and slightly more matured Uzumaki Naruto and his quest to save his friend Uchiha Sasuke from the grips of the snake-like Shinobi, Orochimaru. After 2 and a half years Naruto finally returns to his village of Konoha, and sets about putting his ambitions to work, though it will not be easy, as He has amassed a few (more dangerous) enemies, in the likes of the shinobi organization; Akatsuki.</item>
        <item>From murder and espionage to terrorism and stolen submarines, a team of special agents investigates any crime that has a shred of evidence connected to Navy and Marine Corps personnel, regardless of rank or position.</item>
        <item>Set in the present, the series offers a bold, subversive take on Archie, Betty, Veronica and their friends, exploring the surreality of small-town life, the darkness and weirdness bubbling beneath Riverdale’s wholesome facade.</item>
        <item>Chicagoan Frank Gallagher is the proud single dad of six smart, industrious, independent kids, who without him would be… perhaps better off. When "Frank's" not at the bar spending what little money they have, "he's" passed out on the floor. But the kids have found ways to grow up in spite of him. They may not be like any family you know, but they make no apologies for being exactly who they are.</item>
        <item>Twenty-four-year-old Kara Zor-El, who was taken in by the Danvers family when she was 13 after being sent away from Krypton, must learn to embrace her powers after previously hiding them. The Danvers teach her to be careful with her powers, until she has to reveal them during an unexpected disaster, setting her on her journey of heroism.</item>
        <item>When they were boys, Sam and Dean Winchester lost their mother to a mysterious and demonic supernatural force. Subsequently, their father raised them to be soldiers. He taught them about the paranormal evil that lives in the dark corners and on the back roads of America … and he taught them how to kill it. Now, the Winchester brothers crisscross the country in their "'67" Chevy Impala, battling every kind of supernatural threat they encounter along the way.</item>
        <item>Set in Springfield, the average American town, the show focuses on the antics and everyday adventures of the Simpson family; Homer, Marge, Bart, Lisa and Maggie, as well as a virtual cast of thousands. Since the beginning, the series has been a pop culture icon, attracting hundreds of celebrities to guest star. The show has also made name for itself in its fearless satirical take on politics, media and American life in general.</item>
        <item>A dysfunctional family of superheroes comes together to solve the mystery of their "father's" death, the threat of the apocalypse and more.</item>
        <item>What did the world look like as it was transforming into the horrifying apocalypse depicted in "The Walking Dead"? This spin-off set in Los Angeles, following new characters as they face the beginning of the end of the world, will answer that question.</item>
    </string-array>
    <string-array name="tv_movie_img">
        <item>@drawable/poster_arrow</item>
        <item>@drawable/poster_doom_patrol</item>
        <item>@drawable/poster_dragon_ball</item>
        <item>@drawable/poster_fairytail</item>
        <item>@drawable/poster_family_guy</item>
        <item>@drawable/poster_flash</item>
        <item>@drawable/poster_god</item>
        <item>@drawable/poster_gotham</item>
        <item>@drawable/poster_grey_anatomy</item>
        <item>@drawable/poster_hanna</item>
        <item>@drawable/poster_iron_fist</item>
        <item>@drawable/poster_naruto_shipudden</item>
        <item>@drawable/poster_ncis</item>
        <item>@drawable/poster_riverdale</item>
        <item>@drawable/poster_shameless</item>
        <item>@drawable/poster_supergirl</item>
        <item>@drawable/poster_supernatural</item>
        <item>@drawable/poster_the_simpson</item>
        <item>@drawable/poster_the_umbrella</item>
        <item>@drawable/poster_the_walking_dead</item>
    </string-array>
</resources>